@startuml Sensor
skinparam Linetype ortho

class toio
abstract SensorUnit{
	+ Update() : void
	+ SensorInfo info
}
class M5StickC{
	SerialHundler hundler
	- getSerialData(): void
}
class DummySensorUnit
struct SensorInfo
abstract Environment

toio - SensorUnit
SensorUnit <|-- M5StickC
SensorUnit <|-- DummySensorUnit
SensorUnit -- SensorInfo
SensorUnit <- Environment
@enduml
